Fixes for Java 8 compliance